--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "swiper": "^7.0.6",
     "vite-plugin-windicss": "^1.4.7",
     "vue": "^3.2.13",
     "windicss": "^3.1.8"
