--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "swiper": "^7.0.6",
+    "vite-plugin-compress": "^2.1.0",
     "vite-plugin-windicss": "^1.4.7",
     "vue": "^3.2.13",
     "windicss": "^3.1.8"
