--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.0",
-    "vite": "^2.5.10",
-    "vite-plugin-vue-images": "^0.6.1"
+    "vite": "^2.5.10"
   }
 }
