--- a/package.json
+++ b/package.json
@@ -21,14 +21,11 @@
     "vue-axios": "^3.3.7",
     "vue-easy-lightbox": "^1.2.4",
     "vue-recaptcha-v3": "^2.0.1",
-    "vue-scrollactive": "^0.9.3",
-    "vue3-datepicker": "^0.2.5",
     "vue3-scroll-spy": "^1.0.8",
     "windicss": "^3.1.8"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.0",
-    "vite": "^2.5.10",
-    "vite-plugin-compression": "^0.3.5"
+    "vite": "^2.5.10"
   }
 }
