--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@popperjs/core": "^2.10.2",
     "@vee-validate/i18n": "^4.5.2",
     "@vee-validate/rules": "^4.5.2",
+    "@vitejs/plugin-legacy": "^1.6.0",
     "axios": "^0.22.0",
     "swiper": "^7.0.6",
     "v-calendar": "^3.0.0-alpha.5",
